# RUNE

./: .gitignore  CMakeLists.txt  README.md
scripts/: rune_plot.py
src/: args.cpp  bin_io.cpp  bin_io.h  dumper.cpp  dumper.h  fasta_io.cpp  fasta_io.h  k_bin.cpp  k_bin.h  loader.cpp  loader.h  main.cpp  msg.h  rune.h
src/scripts/: rune_plot.py
